--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,21 @@ name = "home_server"
 version = "0.1.0"
 authors = ["Quentin Boyer <qbsecond@gmail.com>"]
 edition = "2018"
+default-run = "server"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = "0.1.22"
+tower-grpc = {version = "0.1.1", features = ["tower-hyper"]}
+prost = "0.5.0"
+bytes = "0.4.12"
+futures = "0.1.29"
+tower-hyper = "0.1.1"
+log = "0.4.8"
+simplelog = "0.7.3"
+structopt = "0.3.2"
+http = "0.1.18"
+
+[build-dependencies]
+tower-grpc-build = {version = "0.1.0", features = ["tower-hyper"]}
